G1 String deduplication logging not aligned with the rest of G1

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b129

      With the introduction of Unified Logging, the style/conventions used for GC logging was changed in various ways. However, some of the logging done by StringDedup was left using the "old" style. This should be fixed so that logging is aligned with the rest of G1.

      Examples of style changes that's needed:
      * Don't use '[' and ']'
      * Indentation should be 2 spaces
      * Concurrent phases should have a start and end line

            Assignee:
            Per Liden (Inactive)
            Reporter:
            Per Liden (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: