8159974: G1 String deduplication logging not aligned with the rest of G1

Reviewed-by: stefank, tschatzl